--- a/releases.json
+++ b/releases.json
@@ -1,5 +1,13 @@
 [
     {
+        "version": "1.0.1",
+        "downloadUrl": "https://github.com/sjelfull/Chatra/archive/master.zip",
+        "date": "2017-04-04T12:14:54.168Z",
+        "notes": [
+            "[Fixed] Renamed chatraId to publicApiKey"
+        ]
+    },
+    {
         "version": "1.0.0",
         "downloadUrl": "https://github.com/sjelfull/Chatra/archive/master.zip",
         "date": "2017-04-02T12:14:54.168Z",
